// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HistoryComponent matches snapshot 1`] = `
<div
  className="usa-grid-full glossary-editor-card-bottom"
>
  <div>
    Updated on 02/Mo/yyyy
  </div>
  <div>
    Editor: 
    John Doe
  </div>
  <ArchiveIcon
    hasErrored={false}
    id={1}
    isArchived={true}
    onSubmitOption={[Function]}
  />
</div>
`;

exports[`HistoryComponent matches snapshot when dateUpdated is undefined 1`] = `
<div
  className="usa-grid-full glossary-editor-card-bottom"
>
  <div>
    Date updated unknown
  </div>
  <div>
    Editor: 
    John Doe
  </div>
  <ArchiveIcon
    hasErrored={false}
    id={1}
    isArchived={false}
    onSubmitOption={[Function]}
  />
</div>
`;

exports[`HistoryComponent matches snapshot when isArchived is false 1`] = `
<div
  className="usa-grid-full glossary-editor-card-bottom"
>
  <div>
    Updated on 02/Mo/yyyy
  </div>
  <div>
    Editor: 
    John Doe
  </div>
  <ArchiveIcon
    hasErrored={false}
    id={1}
    isArchived={false}
    onSubmitOption={[Function]}
  />
</div>
`;

exports[`HistoryComponent matches snapshot when updatedBy is undefined 1`] = `
<div
  className="usa-grid-full glossary-editor-card-bottom"
>
  <div>
    Updated on 02/Mo/yyyy
  </div>
  <div>
    Editor: 
    None listed
  </div>
  <ArchiveIcon
    hasErrored={false}
    id={1}
    isArchived={false}
    onSubmitOption={[Function]}
  />
</div>
`;
